oracle/changedetection/changedetection-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f ./docker-compose.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: changedetection
  name: changedetection
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: changedetection
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert -f ./docker-compose.yml
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/changedetection-default: "true"
        io.kompose.service: changedetection
    spec:
      containers:
        - image: ghcr.io/dgtlmoon/changedetection.io
          name: changedetection
          ports:
            - containerPort: 5000
              hostPort: 5000
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /datastore
              name: changedetection-data
      hostname: changedetection
      restartPolicy: Always
      volumes:
        - name: changedetection-data
          persistentVolumeClaim:
            claimName: changedetection-data
status: {}
