oracle/changedetection/changedetection-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f ./docker-compose.yml
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: changedetection
  name: changedetection
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 5000
  selector:
    io.kompose.service: changedetection
status:
  loadBalancer: {}
