oracle/changedetection/changedetection-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: changedetection
spec:
  ingressClassName: traefik
  rules:
    - host: changedetection.haijin666.top
      http:
        paths:
          - backend:
              service:
                name: changedetection
                port:
                  number: 80
            path: /
            pathType: Prefix
